[package]
name = "gork-constitution"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.24", features = ["legacy"] }
borsh = "1.5"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.24", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
